add object deletion API
